--- a/incercare.html
+++ b/incercare.html
@@ -16,9 +16,19 @@
     </nav>
   </header>
 
-  <main>
-    <h2>Welcome to My Website</h2>
-    <p>This is the landing page for my website. Here, you can learn more about what my website has to offer and how to navigate it.</p>
+  <main class="main-page">
+    <div class="main-page-description">
+      <p>Partajarea de meme-uri nu a fost niciodată mai simplă!</p>
+      <p style="
+    display: flex;
+    align-content: space-between;
+    align-items: flex-end;">
+    Platforma ideală pentru studenții de la Politehnică, 
+        amuzați de câte materii o să pice semestrul asta.</p>
+    <button>Upload a MEME</button>
+      </div>
+    <img src="WhatsApp Image 2022-11-14 at 02.23 1.png">
+  
   </main>
 
   <section>
